feat: add Player List Card

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,7 @@
       "description": "Standings, rankings, and recent streaks will appear here."
     },
     "stats": {
-      "title": "Stats",
+      "title": "Way over their paygrade",
       "description": "Player and team metrics, advanced charts, and filters coming soon."
     }
   },
