--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,7 +11,7 @@
       "description": "Using advanced stats to find wich player has the most valuable contract to his team."
     },
     "leaderboard": {
-      "title": "Leaderboard",
+      "title": "Top of the pop",
       "description": "Standings, rankings, and recent streaks will appear here."
     },
     "stats": {
